bug: fix top overflow when containers are too large

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -78,3 +78,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+app-root {
+  min-height: 0;
+}
